@@ -33,6 +33,7 @@ Device specific changes/fixes
 	* UniLog* * enable special efficiency calculation while n100W 99999, A1 torque input [Ncm]
 	* JetiAdapter - fix measurement name and unit related data type parser "Geschwindigkeit [kmh]"
 	* HoTTAdapter* - add missing GPS values (satellites, 3D-fix) live data gathering 
+	* HoTTAdapter* - adapt GPS fix values '-'=0, '2'=2, '3'=3, 'D'=4, unknown char=1
 
 Version 3.4.1 - 03 Feb 2020
 Generic changes/fixes
